--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.5'
     implementation 'com.opencsv:opencsv:5.9'
     implementation("com.google.guava:guava:33.0.0-jre")
+    implementation "io.github.java-diff-utils:java-diff-utils:4.9"
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
